All themes: Paint top-level menu items pressed when keyboard focused
When a top-level menu item (TopLevelHeaderTemplateKey) is focused with the
keyboard (e.g. after pressing Alt or after dismissing an opened top-level
menu popup) it must be painted as pressed to indicate the currently
selected when navigating with the left or right arrows.

Using IsKeyboardFocused instead of IsPressed for the style triggers handles
both keyboard and mouse focused states.

While at it, remove the superfluous IsSubmenuOpen trigger for top-level
items since they do not have a submenu.

--- a/Source/PresentationTheme.Aero.Win10/Themes/Aero.Win10.NormalColor.xaml
+++ b/Source/PresentationTheme.Aero.Win10/Themes/Aero.Win10.NormalColor.xaml
@@ -2240,13 +2240,7 @@
         <Setter TargetName="TemplateRoot" Property="BorderBrush"
                 Value="{StaticResource Menu.BarItem.Hot.Border}"/>
       </Trigger>
-      <Trigger Property="IsSubmenuOpen" Value="True">
-        <Setter TargetName="TemplateRoot" Property="Background"
-                Value="{StaticResource Menu.BarItem.Pressed.Background}"/>
-        <Setter TargetName="TemplateRoot" Property="BorderBrush"
-                Value="{StaticResource Menu.BarItem.Pressed.Border}"/>
-      </Trigger>
-      <Trigger Property="IsPressed" Value="True">
+      <Trigger Property="IsKeyboardFocused" Value="True">
         <Setter TargetName="TemplateRoot" Property="Background"
                 Value="{StaticResource Menu.BarItem.Pressed.Background}"/>
         <Setter TargetName="TemplateRoot" Property="BorderBrush"
@@ -2367,7 +2361,7 @@
         <Setter TargetName="TemplateRoot" Property="BorderBrush"
                 Value="{StaticResource Menu.BarItem.Pressed.Border}"/>
       </Trigger>
-      <Trigger Property="IsPressed" Value="True">
+      <Trigger Property="IsKeyboardFocused" Value="True">
         <Setter TargetName="TemplateRoot" Property="Background"
                 Value="{StaticResource Menu.BarItem.Pressed.Background}"/>
         <Setter TargetName="TemplateRoot" Property="BorderBrush"
