--- a/Source/PresentationTheme.Aero.Win8/Themes/Aero.Win8.NormalColor.xaml
+++ b/Source/PresentationTheme.Aero.Win8/Themes/Aero.Win8.NormalColor.xaml
@@ -2297,13 +2297,7 @@
         <Setter TargetName="TemplateRoot" Property="BorderBrush"
                 Value="{StaticResource Menu.BarItem.Hot.Border}"/>
       </Trigger>
-      <Trigger Property="IsSubmenuOpen" Value="True">
-        <Setter TargetName="TemplateRoot" Property="Background"
-                Value="{StaticResource Menu.BarItem.Pressed.Background}"/>
-        <Setter TargetName="TemplateRoot" Property="BorderBrush"
-                Value="{StaticResource Menu.BarItem.Pressed.Border}"/>
-      </Trigger>
-      <Trigger Property="IsPressed" Value="True">
+      <Trigger Property="IsKeyboardFocused" Value="True">
         <Setter TargetName="TemplateRoot" Property="Background"
                 Value="{StaticResource Menu.BarItem.Pressed.Background}"/>
         <Setter TargetName="TemplateRoot" Property="BorderBrush"
@@ -2424,7 +2418,7 @@
         <Setter TargetName="TemplateRoot" Property="BorderBrush"
                 Value="{StaticResource Menu.BarItem.Pressed.Border}"/>
       </Trigger>
-      <Trigger Property="IsPressed" Value="True">
+      <Trigger Property="IsKeyboardFocused" Value="True">
         <Setter TargetName="TemplateRoot" Property="Background"
                 Value="{StaticResource Menu.BarItem.Pressed.Background}"/>
         <Setter TargetName="TemplateRoot" Property="BorderBrush"
