--- a/Source/PresentationTheme.AeroLite.Win8/Themes/AeroLite.Win8.NormalColor.xaml
+++ b/Source/PresentationTheme.AeroLite.Win8/Themes/AeroLite.Win8.NormalColor.xaml
@@ -2006,13 +2006,7 @@
         <Setter TargetName="TemplateRoot" Property="BorderBrush"
                 Value="{StaticResource Menu.BarItem.Hot.Border}"/>
       </Trigger>
-      <Trigger Property="IsSubmenuOpen" Value="True">
-        <Setter TargetName="TemplateRoot" Property="Background"
-                Value="{StaticResource Menu.BarItem.Pressed.Background}"/>
-        <Setter TargetName="TemplateRoot" Property="BorderBrush"
-                Value="{StaticResource Menu.BarItem.Pressed.Border}"/>
-      </Trigger>
-      <Trigger Property="IsPressed" Value="True">
+      <Trigger Property="IsKeyboardFocused" Value="True">
         <Setter TargetName="TemplateRoot" Property="Background"
                 Value="{StaticResource Menu.BarItem.Pressed.Background}"/>
         <Setter TargetName="TemplateRoot" Property="BorderBrush"
@@ -2133,7 +2127,7 @@
         <Setter TargetName="TemplateRoot" Property="BorderBrush"
                 Value="{StaticResource Menu.BarItem.Pressed.Border}"/>
       </Trigger>
-      <Trigger Property="IsPressed" Value="True">
+      <Trigger Property="IsKeyboardFocused" Value="True">
         <Setter TargetName="TemplateRoot" Property="Background"
                 Value="{StaticResource Menu.BarItem.Pressed.Background}"/>
         <Setter TargetName="TemplateRoot" Property="BorderBrush"
