--- a/Source/PresentationTheme.Aero.Win8/Themes/Aero.Win8.NormalColor.xaml
+++ b/Source/PresentationTheme.Aero.Win8/Themes/Aero.Win8.NormalColor.xaml
@@ -1,4 +1,4 @@
-﻿<ResourceDictionary
+<ResourceDictionary
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:system="clr-namespace:System;assembly=mscorlib"
@@ -479,7 +479,8 @@
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type ButtonBase}">
-          <aero8:ButtonChrome Style="{StaticResource {x:Type aero8:ButtonChrome}}"
+          <aero8:ButtonChrome x:Name="ButtonChrome"
+                              Style="{StaticResource {x:Type aero8:ButtonChrome}}"
                               Focusable="False"
                               Background="{TemplateBinding Background}"
                               BorderBrush="{TemplateBinding BorderBrush}"
@@ -494,6 +495,11 @@
                               ContentStringFormat="{TemplateBinding ContentStringFormat}"
                               ContentTemplate="{TemplateBinding ContentTemplate}"
                               ContentTemplateSelector="{TemplateBinding ContentTemplateSelector}"/>
+          <ControlTemplate.Triggers>
+            <Trigger Property="ToggleButton.IsChecked" Value="True">
+              <Setter TargetName="ButtonChrome" Property="RenderPressed" Value="True"/>
+            </Trigger>
+          </ControlTemplate.Triggers>
         </ControlTemplate>
       </Setter.Value>
     </Setter>
